--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -10,10 +10,10 @@
   .plate {
     display: grid;
     place-items: center;
-    width: 80pt;
+    width: 100pt;
     height: 40pt;
     border-style: solid;
-    margin: 8pt;
+    margin: 8pt auto;
     border-width: 4pt;
     border-color: coral;
     border-radius: 8pt;
